--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^7.74.1",
+    "@sentry/tracing": "^7.74.1",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
@@ -31,5 +33,4 @@
     "jest": "^29.7.0",
     "supertest": "^6.3.3"
   }
-  
 }
