--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sentry/tracing": "^7.74.1",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^5.3.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mocha": "^10.2.0",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "sequelize": "^6.33.0",
